--- a/DWMRI/src/.vscode/settings.json
+++ b/DWMRI/src/.vscode/settings.json
@@ -3,5 +3,12 @@
     "python.linting.flake8Enabled": false,
     "python.linting.pylintEnabled": true,
     "python.linting.pydocstyleEnabled": false,
-    "python.linting.enabled": true
+    "python.linting.enabled": true,
+    "python.formatting.provider": "black",
+    "black-formatter.interpreter": [
+        "/home/zeus/miniconda3/envs/cloudspace/bin/python"
+    ],
+    "[python]": {
+        "editor.defaultFormatter": "ms-python.black-formatter"
+    }
 }
