--- a/DWMRI/src/mds2s/config.yaml
+++ b/DWMRI/src/mds2s/config.yaml
@@ -1,11 +1,12 @@
 dbrain:
   train:
-    num_epochs: 100
+    num_epochs: 300
     device: cuda
     mask_p: 0.3
     dropout_p: 0.3
-    learning_rate: 0.00001
+    learning_rate: 0.0001
     batch_size: 8
+    use_scheduler: False
     scheduler_step_size: 1000
     scheduler_gamma: 0.1
     checkpoint_dir: "mds2s/checkpoints/dbrain"
