--- a/DWMRI/src/drcnet/config.yaml
+++ b/DWMRI/src/drcnet/config.yaml
@@ -1,25 +1,28 @@
 dbrain:
   train:
-    num_epochs: 1000
-    device: cuda
-    mask_p: 0.3
-    dropout_p: 0.3
+    num_epochs: 1
+    device: cpu
     learning_rate: 0.0001
-    batch_size: 8
+    batch_size: 1
     use_scheduler: False
     scheduler_step_size: 1000
     scheduler_gamma: 0.1
-    checkpoint_dir: "mds2s/checkpoints/dbrain"
+    checkpoint_dir: "drcnet/checkpoints/dbrain"
   reconstruct:
-    n_preds: 5
-    mask_p: 0.3
-    device: cuda
-    metrics_dir: "mds2s/metrics/dbrain"
-    images_dir: "mds2s/images/dbrain"
+    device: cpu
+    metrics_dir: "drcnet/metrics/dbrain"
+    images_dir: "drcnet/images/dbrain"
   model:
-    in_channel: 10 # is the same as the number of volumes
-    out_channel: 10
+    in_channel: 9 # is the number of volumes taking one out to be predicted
+    out_channel: 1 # is the predicted volume
+    groups: 1
+    dense_convs: 2
+    residual: true
+    base_filters: 32
   data:
+    patch_size: 32
+    step: 16
+    take_volume_idx: 0
     num_b0s: 6
     num_volumes: 10
     noise_sigma: 0.01
