--- a/DWMRI/src/.vscode/settings.json
+++ b/DWMRI/src/.vscode/settings.json
@@ -4,6 +4,9 @@
     "python.linting.pylintEnabled": false,
     "python.linting.pydocstyleEnabled": false,
     "python.linting.enabled": true,
+    "python.linting.flake8Args": [
+        "--ignore=E501,E203"
+    ],
     "python.formatting.provider": "black",
     "python.formatting.blackArgs": [
         "--line-length",
