--- a/DWMRI/src/drcnet/config.yaml
+++ b/DWMRI/src/drcnet/config.yaml
@@ -5,7 +5,7 @@ dbrain:
     learning_rate: 0.001
     batch_size: 32
     use_scheduler: True
-    scheduler_type: "cosine"
+    scheduler_type: "reduceLROnPlateau"
     checkpoint_dir: "drcnet/checkpoints/dbrain"
     ## cosine annealing warm restarts
     scheduler_T_0: 30
@@ -14,6 +14,10 @@ dbrain:
     ## stepLR
     scheduler_step_size: 40
     scheduler_gamma: 0.1
+    ## reduceLROnPlateau
+    scheduler_patience: 10
+    scheduler_factor: 0.1
+    min_lr: 0.00001
   reconstruct:
     device: cuda
     metrics_dir: "drcnet/metrics/dbrain"
