--- a/DWMRI/src/drcnet/config.yaml
+++ b/DWMRI/src/drcnet/config.yaml
@@ -1,23 +1,23 @@
 dbrain:
   train:
-    num_epochs: 60
+    num_epochs: 120  # Increased for better convergence
     device: cuda
-    learning_rate: 0.001
-    batch_size: 16
+    learning_rate: 0.0005  # Reduced for more stable training
+    batch_size: 8  # Reduced to fit larger model in memory
     use_scheduler: True
-    scheduler_type: "reduceLROnPlateau"
+    scheduler_type: "cosine"  # Better for denoising tasks
     checkpoint_dir: "drcnet/checkpoints/dbrain"
     ## cosine annealing warm restarts
-    scheduler_T_0: 30
-    eta_min_lr: 0.0001
+    scheduler_T_0: 20  # More frequent restarts
+    eta_min_lr: 0.00001  # Lower minimum LR
     scheduler_T_mult: 2
     ## stepLR
     scheduler_step_size: 40
     scheduler_gamma: 0.1
     ## reduceLROnPlateau
-    scheduler_patience: 30
-    scheduler_factor: 0.1
-    min_lr: 0.0001
+    scheduler_patience: 15  # More aggressive reduction
+    scheduler_factor: 0.5  # Less aggressive reduction
+    min_lr: 0.00001
   reconstruct:
     device: cuda
     metrics_dir: "drcnet/metrics/dbrain"
@@ -25,13 +25,13 @@ dbrain:
   model:
     in_channel: 9 # is the number of volumes taking one out to be predicted
     out_channel: 1 # is the predicted volume
-    groups: 1
-    dense_convs: 2
+    groups: 4  # Increased for better feature separation
+    dense_convs: 3  # More dense connections for better feature learning
     residual: true
-    base_filters: 32
+    base_filters: 64  # Doubled for more model capacity
   data:
-    patch_size: 32
-    step: 8
+    patch_size: 48  # Larger patches for better context
+    step: 16  # Larger step for more diverse training data
     num_b0s: 6
     num_volumes: 10
     noise_sigma: 0.1
