--- a/DWMRI/src/drcnet_sinusoidal_volume_encoder/config.yaml
+++ b/DWMRI/src/drcnet_sinusoidal_volume_encoder/config.yaml
@@ -1,6 +1,6 @@
 dbrain:
   train:
-    num_epochs: 10  # Increased for better convergence
+    num_epochs: 1  # Increased for better convergence
     device: cuda
     learning_rate: 0.001  # Base learning rate for single GPU
     batch_size: 8  # Per-GPU batch size
@@ -38,8 +38,9 @@ dbrain:
     # Sinusoidal volume encoding parameters
     use_sinusoidal_encoding: true  # Enable sinusoidal positional encoding
     embedding_dim: 64  # Dimension of positional encoding
+    encoding_scale: 0.1  # Scale factor to keep data in [0,1] range
   data:
-    patch_size: 16  # Larger patches for better context
+    patch_size: 8  # Larger patches for better context
     step: 8  # Larger step for more diverse training data
     num_b0s: 6
     num_volumes: 10
